--- a/bootstrap.html
+++ b/bootstrap.html
@@ -32,7 +32,8 @@
 
           <!--images-->
           <div class="images">
-              
+            <img src="images\2020-09-06.png" class="rounded float-start" width=100 alt="">
+            <img src="images\2020-09-06.png" width=100 class="rounded float-end" alt="">
           </div>
     </body>
 </html>
