--- a/bootstrap.html
+++ b/bootstrap.html
@@ -32,8 +32,39 @@
 
           <!--images-->
           <div class="images">
-            <img src="images\2020-09-06.png" class="rounded float-start" width=100 alt="">
-            <img src="images\2020-09-06.png" width=100 class="rounded float-end" alt="">
+            <img src="images\2020-09-06.png" class="rounded float-start" width=300 alt="">
+            <img src="images\2020-09-06.png" width=300 class="rounded float-end" alt="">
           </div>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">days of week</th>
+                <th scope="col">breakfast</th>
+                <th scope="col">Lunch</th>
+                <th scope="col">dinner</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">monday</th>
+                <td>fruit</td>
+                <td>sandwich</td>
+                <td>salad</td>
+              </tr>
+              <tr>
+                <th scope="row">tuesday</th>
+                <td>oatmeal</td>
+                <td>shake</td>
+                <td>grilled chicken</td>
+              </tr>
+              <tr>
+                <th scope="row">wednesday</th>
+                <td>bacon and cheese</td>
+                <td>burger</td>
+                <td>pasta</td>
+              </tr>
+            </tbody>
+          </table>
     </body>
 </html>
